force-app/main/default/objects/EntryAccess__c/EntryAccess__c.object-meta.xml
<CustomObject>
    <label>Local da chave</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Nome do Acesso de entrada</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local das chaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>