force-app/main/default/objects/EntryAccess__c/fields/AccessModel__c.field-meta.xml
<CustomField>
    <fullName>AccessModel__c</fullName>
    <label>Modelo de acesso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSISTED</fullName>
                <label>Assistido</label>
            </value>
            <value>
                <fullName>AUTHORIZED</fullName>
                <label>Autorizado</label>
            </value>
            <value>
                <fullName>AUTONOMOUS</fullName>
                <label>Autônomo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>