force-app/main/default/objects/EntryAccess__c/fields/AccessType__c.field-meta.xml
<CustomField>
    <fullName>AccessType__c</fullName>
    <label>Tipo de acesso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KEY_HOLDER</fullName>
                <label>Portador da Chave</label>
            </value>
            <value>
                <fullName>LOCK_BOX</fullName>
                <label>Lockbox com senha</label>
            </value>
            <value>
                <fullName>FRONT_DOOR</fullName>
                <label>Porta da Frente</label>
            </value>
            <value>
                <fullName>PASSWORD</fullName>
                <label>Senha</label>
            </value>
            <value>
                <fullName>LOCKER</fullName>
                <label>Armário</label>
            </value>
            <value>
                <fullName>LOCK_BOX_KEY</fullName>
                <label>Lockbox com chave</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>