force-app/main/default/objects/EntryAccess__c/fields/ActorRole__c.field-meta.xml
<CustomField>
    <fullName>ActorRole__c</fullName>
    <label>Papel do ator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OWNER</fullName>
                <label>Proprietário</label>
            </value>
            <value>
                <fullName>AGENT</fullName>
                <label>Agente</label>
            </value>
            <value>
                <fullName>TENANT</fullName>
                <label>Inquilino</label>
            </value>
            <value>
                <fullName>INSPECTOR</fullName>
                <label>Vistoriador</label>
            </value>
            <value>
                <fullName>PHOTOGRAPHER</fullName>
                <label>Fotógrafo</label>
            </value>
            <value>
                <fullName>OPS</fullName>
                <label>Operações</label>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
                <label>Sistema</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>