force-app/main/default/objects/EntryAccess__c/fields/ActorUserId__c.field-meta.xml
<CustomField>
    <fullName>ActorUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta do ator</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>EntranceAccess</relationshipName>
    <type>Lookup</type>
</CustomField>