force-app/main/default/objects/EntryAccess__c/fields/ActorUserType__c.field-meta.xml
<CustomField>
    <fullName>ActorUserType__c</fullName>
    <label>Tipo do ator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USER</fullName>
                <label>Usuário</label>
            </value>
            <value>
                <fullName>PERSON</fullName>
                <label>Pessoa</label>
            </value>
            <value>
                <fullName>COMPANY</fullName>
                <label>Empresa</label>
            </value>
            <value>
                <fullName>EXTERNAL</fullName>
                <label>Externo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>