force-app/main/default/objects/EntryAccess__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSPECTION_APP</fullName>
                <label>Aplicativo de Inspeção</label>
            </value>
            <value>
                <fullName>OWNER_PWA</fullName>
                <label>PWA do Proprietário</label>
            </value>
            <value>
                <fullName>OWNER_NATIVE</fullName>
            </value>
            <value>
                <fullName>TENANT_PWA</fullName>
                <label>PWA do Inquilino</label>
            </value>
            <value>
                <fullName>TENANT_NATIVE</fullName>
            </value>
            <value>
                <fullName>AGENT_PWA</fullName>
                <label>PWA do Agente</label>
            </value>
            <value>
                <fullName>MAGIC_LINK</fullName>
                <label>MagicLink</label>
            </value>
            <value>
                <fullName>PORTFOLIO_MANAGER</fullName>
                <label>Gerenciador de Portfólio</label>
            </value>
            <value>
                <fullName>PHOTOS_PWA</fullName>
                <label>PWA de Fotos</label>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
                <label>Sistema</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>