force-app/main/default/objects/EntryAccess__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Record external id</description>
    <externalId>true</externalId>
    <inlineHelpText>Record external id</inlineHelpText>
    <label>ExternalId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>