force-app/main/default/objects/EntryAccess__c/fields/HouseId__c.field-meta.xml
<CustomField>
    <fullName>HouseId__c</fullName>
    <label>HouseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>