force-app/main/default/objects/EntryAccess__c/fields/KeyHolderId__c.field-meta.xml
<CustomField>
    <fullName>KeyHolderId__c</fullName>
    <label>Key holder identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>