force-app/main/default/objects/EntryAccess__c/fields/KeyHolderRole__c.field-meta.xml
<CustomField>
    <fullName>KeyHolderRole__c</fullName>
    <label>Papel do portador das chaves</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OWNER</fullName>
                <label>Proprietario</label>
            </value>
            <value>
                <fullName>TENANT</fullName>
                <label>Inquilino</label>
            </value>
            <value>
                <fullName>INSPECTOR</fullName>
                <label>Vistoriador</label>
            </value>
            <value>
                <fullName>AGENT</fullName>
            </value>
            <value>
                <fullName>EXTERNAL_RESPONSIBLE</fullName>
                <label>Responsável externo</label>
            </value>
            <value>
                <fullName>EXTERNAL_TENANT</fullName>
                <label>Inquilino externo</label>
            </value>
            <value>
                <fullName>PARTNER</fullName>
                <label>Parceiro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>