force-app/main/default/objects/EntryAccess__c/fields/KeyHolderType__c.field-meta.xml
<CustomField>
    <fullName>KeyHolderType__c</fullName>
    <label>Tipo do portador das chaves</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USER</fullName>
            </value>
            <value>
                <fullName>PERSON</fullName>
            </value>
            <value>
                <fullName>COMPANY</fullName>
            </value>
            <value>
                <fullName>EXTERNAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>